# grist-core

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .yarnrc  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MOCKUP.md  NOTICE.txt  PATHS.md  PORT.md  README.md  REDESIGN.md  REVIEW.md  SECURITY.md  bin  crowdin.yml  do_the_thing.sh  dump.rdb  eslint.config.js  eslint.config.shared.js  ormconfig.js  package.json  playwright.config.ts  publiccode.yml  timings.txt  tsconfig-ext.json  tsconfig-prod.json  tsconfig.eslint.json  tsconfig.json  xunit.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  ct.yaml
.storybook/: main.ts  preview.ts  tsconfig.json
app/: cli.sh  tsconfig.json
bower_components/: bootstrap  bootstrap-datepicker  jquery  jquery-ui  jqueryui
buildtools/: .grist-ee-version  build.sh  check_test_groups.js  checkout-ext-directory.sh  dedupe-ext-types.sh  fly-deploy.js  fly-template.env  fly-template.toml  genIconCSS.ts  generate_locale_list.js  generate_translation_keys.js  install_chrome_for_tests.sh  install_edition.sh  prepare_ee.sh  prepare_python.sh  prepare_python2.sh  prepare_python3.sh  prune-runtime-modules.sh  publish-grist-full-edition.sh  sanitize_translations.js  tsconfig-base-ext.json  tsconfig-base.json  update_schema.sh  update_type_info.sh  webpack.api.config.js  webpack.check.js  webpack.config.js
documentation/: database.md  develop.md  (+9 more)
sandbox/wasi/host/: Cargo.toml
sandbox/wasi/host/src/: main.rs
(+2602 files in other folders)
